syntax = "proto3";
option csharp_namespace = "GrpcData";
package data;
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";

service dataService {
 rpc AddClient(AddClientRequest) returns (AddClientResponse);
  
}
message AddClientRequest{
 string ClientId=1;
 string ClientName=2;
 string ClientSecrets=3;
 string RedirectUris=4;
 string PostLogoutRedirectUris=5;
 string AllowedCorsOrigins=6;

}

message  AddClientResponse{
 bool Result=1;
}